<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/colored_border"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/gasTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:text="@string/gas_value"
        android:textSize="16sp" />

    <SeekBar
        android:id="@+id/gasSeekBar"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:max="1000"
        android:progress="1"
        android:progressTint="@color/verdeX"
        tools:layout_editor_absoluteX="62dp"
        tools:layout_editor_absoluteY="137dp" />

    <TextView
        android:id="@+id/etanolTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:text="@string/etanol_value"
        android:textSize="16sp" />

    <SeekBar
        android:id="@+id/etanolSeekBar"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:foregroundTint="#FFFFFF"
        android:max="1000"
        android:progress="1"
        android:progressTint="@color/verdeX"
        tools:layout_editor_absoluteX="105dp"
        tools:layout_editor_absoluteY="280dp" />

    <TextView
        android:id="@+id/resultLabelTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="15dp"
        android:text="@string/choice_label"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/gasoline_option"
        android:textColor="#379F3B"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/fuelImageView"
        android:layout_width="@dimen/imageSize"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:contentDescription="@string/fuel"
        app:srcCompat="@drawable/gasoline" />
</LinearLayout>